Layout completed, minor bugs in the announcements table and page height

--- a/index.html
+++ b/index.html
@@ -131,10 +131,10 @@
                     <div class="trending">
                         <div class="container-title">Trending</div>
                         <div class="trending-container">
-                            <div class="trend-post">Post title 1</div>
-                            <div class="trend-post">Post title 2</div>
-                            <div class="trend-post">Post title 3</div>
-                            <div class="trend-post">Post title 4</div>
+                            <div class="trend-post">Post title 1<div class="autor">By Profile Name (@profile)</div></div>
+                            <div class="trend-post">Post title 2<div class="autor">By Profile Name (@profile)</div></div>
+                            <div class="trend-post">Post title 3<div class="autor">By Profile Name (@profile)</div></div>
+                            <div class="trend-post">Post title 4<div class="autor">By Profile Name (@profile)</div> </div>
                         </div>
                     </div>
             </div>
